argo-app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: core-apps
  labels:
    apps: core
