argo-app/argo-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ui
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: argo-tls-secret
      hosts:
        - argo.cluster.cloudnativerioja.com
  rules:
    - host: argo.cluster.cloudnativerioja.com
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: http
